# nexusclaw

./: .env.example  .gitignore  Dockerfile  Dockerfile.arm64  GUIA_COMPLETO.md  Makefile  NexusClaw_Guia_Completo.docx  README.md  docker-compose.minimal.yml  docker-compose.orange-pi.yml  docker-compose.yml  main.py  pyproject.toml  requirements.orange-pi.txt  requirements.txt  start.sh
adapters/: __init__.py  base.py
config/: __init__.py  models.orange-pi.yaml  settings.py
core/: __init__.py  agent.py  code_evolution.py  deep_thinking.py  memory.py  orchestrator.py  self_improvement.py
docker/: entrypoint.arm64.sh
docs/: ARCHITECTURE.md  AUTO_IMPROVEMENT.md  CODE_ANALYSIS.md  DEEP_THINKING.md  INSTALL_ORANGE_PI.md  NOVAS_FUNCIONALIDADES.md  SELF_IMPROVEMENT.md  SKILLS.md  VERIFICACAO.md
nexus_ai/: __init__.py  cli.py
scripts/: install-orange-pi.sh
skills/: __init__.py  base.py  builtins.py
