[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai"
version = "1.0.0"
description = "Seu Assistente de IA Pessoal Soberano - 100% Local"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NexusClaw Team", email = "team@nexus-ai.local"}
]
keywords = ["ai", "assistant", "llm", "local", "privacy", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.4.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "aiogram>=3.4.0",
    "discord.py>=2.3.0",
    "python-telegram-bot>=21.1.0",
    "twilio>=8.11.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0.0",
    "cryptography>=42.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    "bcrypt>=4.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
nexus-ai = "main:main"
nexus-cli = "nexusclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusclaw*", "core*", "adapters*", "skills*", "config*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
